log
Fri 12 Aug 2022 01:06:53 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
4a799d9
Mon 15 Aug 2022 01:32:06 AM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:7: error: variable ‘numParaSuma’ set but not used [-Werror=unused-but-set-variable]
   40 |   int numParaSuma;
      |       ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
977c8db
Mon 15 Aug 2022 01:39:23 AM UTC: 
 exercises.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:43:15: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   43 |   *sumaN = (a , n);
      |               ^
exercises.c:43:10: error: lvalue required as left operand of assignment
   43 |   *sumaN = (a , n);
      |          ^
cc1: all warnings being treated as errors
Compilation failed
34093d8
Mon 15 Aug 2022 01:40:10 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
79ed067
Mon 15 Aug 2022 01:40:46 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
e4fa887
Mon 15 Aug 2022 01:45:23 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
abe5d96
Mon 15 Aug 2022 02:08:30 AM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
2884867
Mon 15 Aug 2022 02:09:43 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:64:29: error: expected ‘;’ before ‘return’
   64 |   strcpy(sujeto -> rut, rut)
      |                             ^
      |                             ;
   65 | 
   66 |   return sujeto;
      |   ~~~~~~                     
exercises.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1d8b718
Mon 15 Aug 2022 02:10:50 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:64:29: error: expected ‘;’ before ‘sujeto’
   64 |   strcpy(sujeto -> rut, rut)
      |                             ^
      |                             ;
   65 |   sujeto -> edad = edad
      |   ~~~~~~                     
exercises.c:68:1: error: control reaches end of non-void function [-Werror=return-type]
   68 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2dd3e7e
Mon 15 Aug 2022 02:11:10 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from /nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/string.h:519,
                 from test.c:3:
In function ‘strcpy’,
    inlined from ‘crearPersona’ at exercises.c:64:3:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/bits/string_fortified.h:79:10: error: ‘__builtin___strcpy_chk’ offset 30 is out of the bounds [0, 8] [-Werror=array-bounds]
   79 |   return __builtin___strcpy_chk (__dest, __src, __glibc_objsize (__dest));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fbbd028
Mon 15 Aug 2022 02:16:11 AM UTC: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from /nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/string.h:519,
                 from test.c:3:
In function ‘strcpy’,
    inlined from ‘crearPersona’ at exercises.c:62:3:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/bits/string_fortified.h:79:10: error: ‘__builtin___strcpy_chk’ offset 30 is out of the bounds [0, 8] [-Werror=array-bounds]
   79 |   return __builtin___strcpy_chk (__dest, __src, __glibc_objsize (__dest));
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a265032
Mon 15 Aug 2022 02:26:35 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
be96b99
Mon 15 Aug 2022 02:29:28 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
a7af4eb
Mon 15 Aug 2022 02:59:43 AM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
   86 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
846b55e
Mon 15 Aug 2022 02:59:50 AM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|4
total_score: 30/70
f4c7d39
Mon 15 Aug 2022 03:00:09 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
8cf8f65
